[metadata]
name = devign-m-alban
version = 0.0.1
author = Michael Alban
author_email = m.alban37@gmail.com
description = A partial implementation of the Devign vulnerability detection model.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/m-alban/devign
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src
